# outline-dl

./: .env.example  .gitignore  README.md  pyproject.toml
src/outline_dl/: __init__.py  __main__.py  auth.py  cli.py  config.py  downloader.py  interactive.py
tests/: test_config.py
